Generic PLIC example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ edition = "2018"
 rust-version = "1.59"
 
 [dependencies]
-e310x-hal = "0.9.3"
+e310x-hal = { git = "https://github.com/greenlsi/e310x-hal.git", branch = "master" }
 embedded-hal = "0.2.7"
-riscv = "0.10.1"
+riscv = { path = "../riscv" }
 nb = "1.0.0"
+
+[dev-dependencies]
+panic-halt = "0.2"
+riscv-rt = "0.11.0"
 
 [features]
 board-hifive1 = []
@@ -22,6 +26,7 @@ board-hifive1-revb = ["e310x-hal/g002"]
 board-redv = ["e310x-hal/g002"]
 board-lofive = []
 board-lofive-r1 = ["e310x-hal/g002"]
+virq = ["e310x-hal/virq"]
 
 [package.metadata.docs.rs]
 features = ['board-hifive1-revb']
