--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,29 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Interrupt",
-            // Substitute with the board number
-            "device": "FE310",
-            "type": "cortex-debug",
-            "preLaunchTask": "example-interrupt",
-            "runToEntryPoint": "main",
-            // Defined in tasks.json
-            "request": "launch",
-            "servertype": "jlink",
-            // JLink server path
-            // "serverpath": "",
-            // GDB debug output
-            //"showDevDebugOutput": "raw",
-            "cwd": "${workspaceRoot}",
-            // Executable to launch
-            "executable": "${workspaceRoot}/target/riscv32imac-unknown-none-elf/debug/examples/interrupt",
-            "interface": "jtag",
-            "svdFile": "${workspaceRoot}/hifive.svd",
-            // Set this to point to sifive risc-v gdb path 
-            "gdbPath": "${workspaceRoot}/../../toolchains/sifive/bin/riscv64-unknown-elf-gdb",
-            "toolchainPrefix": "riscv64-unknown-elf",
-        },
-        {
             "name": "Hello World",
             // Substitute with the board number
             "device": "FE310",
@@ -41,6 +18,52 @@
             "cwd": "${workspaceRoot}",
             // Executable to launch
             "executable": "${workspaceRoot}/target/riscv32imac-unknown-none-elf/debug/examples/hello_world",
+            "interface": "jtag",
+            "svdFile": "${workspaceRoot}/hifive.svd",
+            // Set this to point to sifive risc-v gdb path 
+            "gdbPath": "${workspaceRoot}/../../toolchains/sifive/bin/riscv64-unknown-elf-gdb",
+            "toolchainPrefix": "riscv64-unknown-elf",
+        },
+        {
+            "name": "Blink",
+            // Substitute with the board number
+            "device": "FE310",
+            "type": "cortex-debug",
+            "preLaunchTask": "example-blink",
+            "runToEntryPoint": "main",
+            // Defined in tasks.json
+            "request": "launch",
+            "servertype": "jlink",
+            // JLink server path
+            // "serverpath": "",
+            // GDB debug output
+            "showDevDebugOutput": "raw",
+            "cwd": "${workspaceRoot}",
+            // Executable to launch
+            "executable": "${workspaceRoot}/target/riscv32imac-unknown-none-elf/debug/examples/blink",
+            "interface": "jtag",
+            "svdFile": "${workspaceRoot}/hifive.svd",
+            // Set this to point to sifive risc-v gdb path 
+            "gdbPath": "${workspaceRoot}/../../toolchains/sifive/bin/riscv64-unknown-elf-gdb",
+            "toolchainPrefix": "riscv64-unknown-elf",
+        },
+        {
+            "name": "Interrupt",
+            // Substitute with the board number
+            "device": "FE310",
+            "type": "cortex-debug",
+            "preLaunchTask": "example-interrupt",
+            "runToEntryPoint": "main",
+            // Defined in tasks.json
+            "request": "launch",
+            "servertype": "jlink",
+            // JLink server path
+            // "serverpath": "",
+            // GDB debug output
+            //"showDevDebugOutput": "raw",
+            "cwd": "${workspaceRoot}",
+            // Executable to launch
+            "executable": "${workspaceRoot}/target/riscv32imac-unknown-none-elf/debug/examples/interrupt",
             "interface": "jtag",
             "svdFile": "${workspaceRoot}/hifive.svd",
             // Set this to point to sifive risc-v gdb path 
