--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -70,5 +70,28 @@
             "gdbPath": "${workspaceRoot}/../../toolchains/sifive/bin/riscv64-unknown-elf-gdb",
             "toolchainPrefix": "riscv64-unknown-elf",
         },
+        {
+            "name": "Interrupt (VEXTERN)",
+            // Substitute with the board number
+            "device": "FE310",
+            "type": "cortex-debug",
+            "preLaunchTask": "example-interrupt-vextern",
+            "runToEntryPoint": "main",
+            // Defined in tasks.json
+            "request": "launch",
+            "servertype": "jlink",
+            // JLink server path
+            // "serverpath": "",
+            // GDB debug output
+            //"showDevDebugOutput": "raw",
+            "cwd": "${workspaceRoot}",
+            // Executable to launch
+            "executable": "${workspaceRoot}/target/riscv32imac-unknown-none-elf/debug/examples/interrupt_vextern",
+            "interface": "jtag",
+            "svdFile": "${workspaceRoot}/hifive.svd",
+            // Set this to point to sifive risc-v gdb path 
+            "gdbPath": "${workspaceRoot}/../../toolchains/sifive/bin/riscv64-unknown-elf-gdb",
+            "toolchainPrefix": "riscv64-unknown-elf",
+        },
     ]
 }
